fix: center figures by making them shrink-wrap to content

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -211,6 +211,7 @@ main {
 }
 
 .post-content figure {
+    display: table;
     margin: 16px auto;
     max-width: 100%;
 }
